# betterspread

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: publish.yml
betterspread/: __init__.py  cell.py  connection.py  row.py  sheet.py  style.py  tab.py  utils.py
docs/: conf.py  index.rst  requirements.txt
docs/api/: cell.rst  connection.rst  row.rst  sheet.rst  style.rst  tab.rst
docs/getting-started/: installation.rst  quickstart.rst  why.rst
tests/: test_cell.py  test_connection.py  test_row.py  test_style.py  test_utils.py
