[project]
name = "betterspread"
version = "1.0.6"
description = "An async wrapper around gspread with cell and row level functionalities"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    {name = "Md Shahriyar Alam", email = "contact@shahriyar.dev"}
]
requires-python = ">=3.10"
dependencies = [
    "gspread>=6.2.1",
    "gspread-formatting>=1.2.1",
]

[project.urls]
GitHub = "https://github.com/shahriyardx/betterspread"
Documentation = "https://betterspread.readthedocs.io"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
docs = [
    "sphinx>=8.0.0",
    "furo>=2024.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["betterspread"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
